fixed mobile project card spacing between cards

--- a/css/contact.css
+++ b/css/contact.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 75vh;
+    height: 68vh;
     background-color: var(--clr-primary-200);
 }
 
