--- a/css/projects.css
+++ b/css/projects.css
@@ -23,13 +23,17 @@
 }
 .projectCard { 
     display: flex;
-    width: 325px;
+    width: 320px;
     height: 575px;
     padding: 1rem;
+    margin: 1rem;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     position: relative;
+    background-color: rgba(255, 255, 255, .15);  
+    backdrop-filter: blur(5px);
+    border-radius: 5px;
 }
 .projectCard a {
     /* Make button as wide as text inside it */
@@ -79,11 +83,6 @@
     margin-right: 1rem;
 }
 
-/* img.wave-top,
-img.wave-bottom {
-    filter: drop-shadow(0 -1px 15px var(--clr-primary-300));
-    width: 100%;    
-} */
 .wave-top {
     aspect-ratio: 905/105;
     filter: drop-shadow(0 -1px 15px var(--clr-primary-300));    
@@ -96,7 +95,7 @@ img.wave-bottom {
     z-index: 15;
 }
 .wave-line {
-    aspect-ratio: 900/100;
+    aspect-ratio: 900/75;
     width: 100vw;
     background-repeat: no-repeat;
     background-position: center;
@@ -120,14 +119,15 @@ img.wave-bottom {
 }
 @media screen and (max-width:820px) {
     .projectCard {
-        width: 500px;
+        width: 450px;
+        height: auto;
         margin: 1rem 0;
     }
 }
 
 @media screen and (max-width:480px) {
     .projectCard {
-        margin: 0;
+        margin: 1rem 0;
         height: fit-content;
     }
 }
